--- a/charts/pxc-db/values.yaml
+++ b/charts/pxc-db/values.yaml
@@ -5,7 +5,7 @@
 finalizers:
   - delete-pxc-pods-in-order
 ## Set this if you want to delete proxysql persistent volumes on cluster deletion
-#  - delete-proxysql-pvc
+  - delete-proxysql-pvc
 ## Set this if you want to delete database persistent volumes on cluster deletion
 #  - delete-pxc-pvc
 ## Set this if you want to delete cert manager certificates on cluster deletion
@@ -54,7 +54,7 @@ tls: {}
 pxc:
   size: 3
   image:
-    repository: percona/percona-xtradb-cluster
+    repository: docker.io/percona/percona-xtradb-cluster
     tag: 8.0.35-27.1
   # imagePullPolicy: Always
   autoRecovery: true
