--- a/charts/pxc-db/values.yaml
+++ b/charts/pxc-db/values.yaml
@@ -17,9 +17,9 @@ fullnameOverride: ""
 # PerconaXtraDBCluster annotations
 annotations: {}
 
-operatorImageRepository: percona/percona-xtradb-cluster-operator
+operatorImageRepository: docker.io/percona/percona-xtradb-cluster-operator
 
-crVersion: 1.14.1
+crVersion: 1.14.0
 ignoreAnnotations: []
   # - iam.amazonaws.com/role
 ignoreLabels: []
