--- a/charts/pxc-db/values.yaml
+++ b/charts/pxc-db/values.yaml
@@ -163,6 +163,7 @@ pxc:
     ##   GKE, AWS & OpenStack)
     ##
     storageClass: csi-rbd-sc
+    reclaimPolicy: Retain
     accessMode: ReadWriteOnce
     size: 8Gi
 
