--- a/charts/pxc-db/values.yaml
+++ b/charts/pxc-db/values.yaml
@@ -557,7 +557,7 @@ pmm:
     limits: {}
 
 backup:
-  enabled: false
+  enabled: true
   # allowParallel: true
   image:
     repository: docker.io/percona/percona-xtradb-cluster-operator
@@ -576,7 +576,7 @@ backup:
       requests: {}
       limits: {}
   storages: 
-     percona-backup:
+     percona-backup-new:
        type: filesystem
        volume:
          persistentVolumeClaim:
@@ -585,9 +585,11 @@ backup:
            resources:
              requests:
                storage: 1Gi
-    # s3-us-west:
-    #   type: s3
-    #   verifyTLS: true
+     ceph-s3-us-west:
+       type: s3
+       verifyTLS: false
+
+       
     #   nodeSelector:
     #     storage: tape
     #     backupWorker: 'True'
@@ -638,38 +640,25 @@ backup:
     #       - "--someflag=abc"
     #       xbstream:
     #       - "--someflag=abc"
-    #   s3:
-    #     bucket: S3-BACKUP-BUCKET-NAME-HERE
+       s3:
+         bucket: percona-backups-test
     #     # Use credentialsSecret OR credentialsAccessKey/credentialsSecretKey
-    #     credentialsSecret: my-cluster-name-backup-s3
-    #     #credentialsAccessKey: REPLACE-WITH-AWS-ACCESS-KEY
-    #     #credentialsSecretKey: REPLACE-WITH-AWS-SECRET-KEY
+         credentialsSecret: backup-ceph-s3
+         credentialsAccessKey: WjBMMkhZTjFKOE04STVSVlVBOUU=
+         credentialsSecretKey: VjBMNWdrR2VSRUhKQU82Rm9KU294ZERoTkl2QktjWVhBZjR1REJXRQ==
     #     region: us-west-2
-    #     endpointUrl: https://sfo2.digitaloceanspaces.com
-    # s3-us-west-binlogs:
-    #   type: s3
-    #   s3:
-    #     bucket: S3-BACKUP-BUCKET-NAME-HERE/DIRECTORY
-    #     credentialsSecret: my-cluster-name-backup-s3
-    #     region: us-west-2
-    #     endpointUrl: https://sfo2.digitaloceanspaces.com
-    # azure-blob:
-    #   type: azure
-    #   azure:
-    #     credentialsSecret: azure-secret
-    #     container: test
-    #     endpointUrl: https://accountName.blob.core.windows.net
-    #     storageClass: Hot
+         endpointUrl: https://machi-nas-s.hpc.virginia.edu:7480
+    
 
-  #schedule: 
-  #   - name: "daily-backup"
-  #     schedule: "0 0 * * *"
-  #     keep: 5
-  #     storageName: percona-backup
-    # - name: "sat-night-backup"
-    #   schedule: "0 0 * * 6"
-    #   keep: 3
-    #   storageName: s3-us-west
+  schedule: 
+     - name: "daily-backup"
+       schedule: "0 0 * * *"
+       keep: 2
+       storageName: percona-backup-new
+     - name: "sat-night-backup"
+       schedule: "0 0 * * 6"
+       keep: 3
+       storageName: ceph-s3-us-west
 
 secrets:
   ## You should be overriding these with your own or specify name for clusterSecretName.
