--- a/charts/pxc-db/values.yaml
+++ b/charts/pxc-db/values.yaml
@@ -651,13 +651,13 @@ backup:
     
 
   schedule: 
-     - name: "daily-backup"
+     - name: "volume-backup"
        schedule: "0 0 * * *"
-       keep: 2
+       keep: 5
        storageName: percona-backup-new
-     - name: "sat-night-backup"
-       schedule: "0 0 * * 6"
-       keep: 3
+     - name: "s3-backup"
+       schedule: "0 0 * * *"
+       keep: 5
        storageName: ceph-s3-us-west
 
 secrets:
