--- a/charts/pxc-db/values.yaml
+++ b/charts/pxc-db/values.yaml
@@ -644,8 +644,8 @@ backup:
          bucket: percona-backups-test
     #     # Use credentialsSecret OR credentialsAccessKey/credentialsSecretKey
          credentialsSecret: backup-ceph-s3
-         credentialsAccessKey: WjBMMkhZTjFKOE04STVSVlVBOUU=
-         credentialsSecretKey: VjBMNWdrR2VSRUhKQU82Rm9KU294ZERoTkl2QktjWVhBZjR1REJXRQ==
+         credentialsAccessKey: Z0L2HYN1J8M8I5RVUA9E
+         credentialsSecretKey: V0L5gkGeREHJAO6FoJSoxdDhNIvBKcYXAf4uDBWE
     #     region: us-west-2
          endpointUrl: https://machi-nas-s.hpc.virginia.edu:7480
     
